--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.4",
+    "@mdxeditor/editor": "^3.11.5",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "openai": "^4.67.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
