--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "openai": "^4.67.0",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^17.0.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
